# pimoroni-unicorn-rs

./: .gitignore  Cargo.toml  MIT  README.md
examples/: christmas_trees.rs  scrolling_text.rs
galactic-unicorn-embassy/: Cargo.toml  rust-toolchain.toml
galactic-unicorn-embassy/.cargo/: config.toml
galactic-unicorn-embassy/examples/: balls.rs  happy_new_year.rs  scrolling_text.rs
galactic-unicorn-embassy/src/: lib.rs  pins.rs
galactic-unicorn-rp/: Cargo.toml
galactic-unicorn-rp/.cargo/: config.toml
galactic-unicorn-rp/examples/: christmas_trees.rs  happy_new_year.rs  scrolling_text.rs
galactic-unicorn-rp/src/: lib.rs  pins.rs
src/: buttons.rs  lib.rs  main.rs  scrolling_text.rs  unicorn_graphics.rs
src/unicorn/: galactic_unicorn.rs  mod.rs
unicorn-graphics/: Cargo.toml
unicorn-graphics/src/: lib.rs
