[package]
name = "galactic-unicorn-embassy"
version = "0.3.2"
edition = "2021"
homepage = "https://github.com/domneedham/pimoroni-unicorn-rs"
repository = "https://github.com/domneedham/pimoroni-unicorn-rs"
authors = ["Dominic Needham"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
pio = "0.2"
pio-proc = "0.2"
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
] }
embassy-executor = { version = "0.5.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
    "nightly",
] }
fixed = "1.23.1"
fixed-macro = "1.2"

embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3.3"

unicorn-graphics = { version = "0.2.1", path = "../unicorn-graphics" }

[dev-dependencies]
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
panic-halt = "0.2.0"
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
micromath = "2.0.0"
heapless = "0.8.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[[example]]
name = "scrolling_text"

[[example]]
name = "balls"
